src/app/globals.css
:root {
  --background: #a9c2cd;
  --foreground: #cddce3;
  --super-foreground: #dce3e7;
  --text-color: #171b1c;

  --font-family: "Mona Sans", Arial, Helvetica, sans-serif;
  --code-font-family: "Hubot Sans", Arial, Helvetica, sans-serif;

  --corner-radius: 1.5rem;
  --corner-radius-sm: 0.75rem;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
    --super-foreground: #dce3e7;
  }
} */

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: var(--text-color);
  background: var(--background);
  font-family: var(--font-family);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

button,
p {
  all: unset;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

@font-face {
  font-family: "Mona Sans";
  src:
    url("../fonts/mona-sans.woff2") format("woff2 supports variations"),
    url("../fonts/mona-sans.woff2") format("woff2 variations"),
    url("../fonts/mona-sans.ttf") format("truetype");
  font-weight: 200 900;
  font-stretch: 75% 125%;
}

@font-face {
  font-family: "Hubot Sans";
  src:
    url("../fonts/hubot-sans.woff2") format("woff2 supports variations"),
    url("../fonts/hubot-sans.woff2") format("woff2 variations"),
    url("../fonts/hubot-sans.ttf") format("truetype");
  font-weight: 200 900;
  font-stretch: 75% 125%;
}

